adding configs to execute test on selenium grid

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,8 +1,14 @@
-# App environment: dev
+# App environment: qa, dev, preprod
 environment=dev
 
-#Runmode: local
+#Runmode: local - remote
 runMode=local
+
+#RemoteMode: SELENIUM
+remoteMode=selenium
+
+#Selenium Grid URL
+seleniumGridUrl=http://localhost:4444/wd/hub
 
 # RetryFailedTests
 retryFailedTests=false
